# dagger

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
dagger/: dag.cpp  dag.hpp  dag_run.hpp  executor.cpp  executor.hpp  node.hpp  task.hpp  type_utils.hpp
src/: dag.hpp  executor.cpp  executor.hpp  main.cpp  task.hpp  type_utils.hpp  work_stealing_deque.hpp
